# qt_Simple_Notes_app

./: CMakeLists.txt  README.md  main.cpp  notepad.cpp  notepad.h  notepad.ui  res.qrc
